--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@preact/signals": "^1.2.2",
     "@tauri-apps/api": "^1.5.2",
     "flowbite": "^2.2.1",
-    "preact": "^10.16.0"
+    "preact": "^10.16.0",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
