--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", 
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
+uuid = { version = "1.7.0", features = ["v4"] }
 serde_json = "1.0"
 dirs = "5.0.1"
 
