--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.24.1",
     "@preact/signals": "^1.2.2",
     "@tauri-apps/api": "^1.5.2",
     "flowbite": "^2.2.1",
