--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "launcher"
+name = "minecraft-launcher"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A Minecraft launcher"
+authors = ["LipezJ"]
 license = ""
-repository = ""
+repository = "https://github.com/LipezJ/minecraft-launcher"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
